--- a/S01_GUI_ChartMander1988.ipynb
+++ b/S01_GUI_ChartMander1988.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b66d2ee-c106-4d40-bfc1-5d2e9a2c64a2",
+   "execution_count": 1,
+   "id": "22acd400-4636-48ae-ba3c-13f3ed851c57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27ebd773fa434babb3a9b15986cab647",
+       "model_id": "5211719681fa407798772ae1036002ae",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(VBox(children=(HBox(children=(HTML(value='<b>Fiber Section - Openseespy</b>', la…"
+       "VBox(children=(HBox(children=(VBox(children=(HTML(value=\"<b style='text-align: center; display: block;'>f<sub>…"
       ]
      },
      "metadata": {},
@@ -22,9 +22,17 @@
     }
    ],
    "source": [
-    "# Note: Close Jupyter Notebook using: File >> Shut Down.\n",
+    "### Note: Close Jupyter Notebook using: File >> Shut Down.\n",
     "%run S01_GUI03_A01_ChartMander1988.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dbfb7ef-1834-4b87-b1d6-7a177befe108",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
