--- a/S01_GUI_ChartMander1988.ipynb
+++ b/S01_GUI_ChartMander1988.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "22acd400-4636-48ae-ba3c-13f3ed851c57",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5211719681fa407798772ae1036002ae",
+       "model_id": "ba4c6b55aa9d4808bbd1ecb483413378",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbfb7ef-1834-4b87-b1d6-7a177befe108",
+   "id": "55be8c07-c8fd-4dab-b324-e4f171fd9f5e",
    "metadata": {},
    "outputs": [],
    "source": []
